# face_authentication

./: CMakeLists.txt  faceRecognition.cpp
